src/objects/LearningContent__c.object
<CustomObject>
    <fields>
        <fullName>Detail__c</fullName>
        <label>詳細</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <label>期日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>必修</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TargetSkill__c</fullName>
        <description>対象とするスキルです</description>
        <label>対象スキル</label>
        <picklist>
            <picklistValues>
                <fullName>プログラミング</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>エンジニアリング</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>営業</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>事務</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>全般</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>その他</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <description>学習にかかる目安の時間です</description>
        <label>学習目安時間(分)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>学習コンテンツ</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>学習コンテンツ名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>